introduce cart-related entities
