# docs/shop-api-openapi.yaml
@@ -39,7 +39,7 @@ paths:
         "401":
           description: Unauthorized. User not logged.
         "403":
-          description: Forbidden. User doesn't have a cart.
+          description: Forbidden. User doesn't exist.
         "404":
           description: Not found. Cart not found. Try to log again.
     delete:
@@ -55,7 +55,7 @@ paths:
         "401":
           description: Unauthorized. User not logged.
         "403":
-          description: Forbidden. User doesn't have a cart.
+          description: Forbidden. User doesn't exist.
 
   /cart/items:
     get:
@@ -77,7 +77,7 @@ paths:
         "401":
           description: Unauthorized. User not logged.
         "403":
-          description: Forbidden. User doesn't have a cart.
+          description: Forbidden. User doesn't exist.
         "404":
           description: Not found. Cart not found. Try to log again.
     post:
@@ -99,7 +99,7 @@ paths:
         "401":
           description: Unauthorized. User not logged.
         "403":
-          description: Forbidden. User doesn't have a cart.
+          description: Forbidden. User doesn't exist.
         "404":
           description: Not found. Cart or product not found. Try to log again.
     patch:
@@ -123,7 +123,7 @@ paths:
         "401":
           description: Unauthorized. User not logged.
         "403":
-          description: Forbidden. User doesn't have a cart.
+          description: Forbidden. User doesn't exist.
         "404":
           description: Not found. Cart or product not found. Try to log again.
 
@@ -142,7 +142,7 @@ paths:
         "401":
           description: Unauthorized. User not logged.
         "403":
-          description: Forbidden. User doesn't have a cart.
+          description: Forbidden. User doesn't exist.
         "404":
           description: Not found. Cart or product not found.
 
@@ -166,7 +166,7 @@ paths:
         "401":
           description: Unauthorized. User not logged.
         "403":
-          description: Forbidden. User doesn't have a cart.
+          description: Forbidden. User doesn't exist.
         "404":
           description: Not found. Cart or product not found.
 
@@ -360,14 +360,14 @@ components:
           format: int64
           readOnly: true
           example: 4534
-        cartId:
-          type: integer
-          format: int64
-          readOnly: true
-          example: 1231
     UserDto:
       type: object
       properties:
+        id:
+          type: integer
+          format: int64
+          readOnly: true
+          example: 4533
         email:
           type: string
           format: email
@@ -438,11 +438,6 @@ components:
       type: object
       readOnly: true
       properties:
-        id:
-          type: integer
-          format: int64
-          readOnly: true
-          example: 234
         total:
           type: number
           format: double
